--- a/MANUALHTML/calclock.html
+++ b/MANUALHTML/calclock.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -150,7 +149,7 @@ yyyymmddHHMMSS
     年月日時分秒(14桁)</pre>
 <p>変換後の値を分に直す場合は60、時は3600、日は86400で除算する。</p>
 <h3>【注意】</h3>
-<p> 入力ファイル<code>&lt;file&gt;</code>は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
+<p> 入力ファイル<code>&lt;file&gt;</code> は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ cat data
 0001 0000007 20060201 20060206 117 8335 -145
