--- a/MANUALHTML/check_date_name.html
+++ b/MANUALHTML/check_date_name.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -141,9 +140,9 @@ Option  : --through &lt;string&gt;
 Version : Tue Oct 19 23:46:03 JST 2021
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>&lt;check_file&gt;</code>に記述されているタグ名、記号(D/W/M)に従って<code>&lt;name_file&gt;</code>の日/週/月の記述が正しいかどうかチェックします。エラーがあった場合は、コマンドはエラー終了し、標準出力にタグ名と、記号をを出力します。</p>
+<p><code>&lt;check_file&gt;</code> に記述されているタグ名、記号(D/W/M)に従って<code>&lt;name_file&gt;</code> の日/週/月の記述が正しいかどうかチェックします。エラーがあった場合は、コマンドはエラー終了し、標準出力にタグ名と、記号をを出力します。</p>
 <h4>オプション</h4>
-<p><code>--through &lt;string&gt; &lt;check_file&gt;</code>と<code>&lt;name_file&gt;</code>のデータが<code>&lt;string&gt;</code>で指定した文字列に等しい場合は、チェックを実施しません。<code>&lt;string&gt;</code>のデフォルトは、<code>&quot;_&quot;</code>となります。このオプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定できます。</p>
+<p><code>--through &lt;string&gt;</code><code>&lt;check_file&gt;</code>と<code>&lt;name_file&gt;</code> のデータが<code>&lt;string&gt;</code>で指定した文字列に等しい場合は、チェックを実施しません。<code>&lt;string&gt;</code>のデフォルトは、<code>&quot;_&quot;</code> となります。こ<code>の</code>オプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定できます。</p>
 <h3>【例１】 通常のチェック</h3>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat check
 A D    &lt;-- 日付
