--- a/MANUALHTML/delf.html
+++ b/MANUALHTML/delf.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -143,7 +142,7 @@ Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>file</code>から、指定したフィールドだけを除いて出力する(delf=delete field)。<a href="self.html" class="command">self(1)</a>とは逆の動作となる。ファイル名指定なし、あるいは、ファイル名が-の時は標準入力を期待する。</p>
 <h3>【オプション】</h3>
-<p><code>-d</code>: ダイレクトモード文字列<code>&lt;string&gt;</code>に<code>delf</code>を適用する。</p>
+<p><code>-d</code> : ダイレクトモード文字列<code>&lt;string&gt;</code>に<code>delf</code> を適用する。</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ cat data              ←元データ
 0000000 浜地______ 50 F
