--- a/MANUALHTML/delr.html
+++ b/MANUALHTML/delr.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -141,7 +140,7 @@ Version : Sun Nov 21 17:29:32 JST 2021
           Open usp Tukubai (LINUX+FREEBSD/PYTHON2.4/UTF-8)
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致した行を除いて出力します。ファイル名が省略された時及び<code>&quot;-&quot;</code>の時は標準入力から入力します。</p>
+<p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致した行を除いて出力します。ファイル名が省略された時及び<code>&quot;-&quot;</code> の時は標準入力から入力します。</p>
 <h3>【例１】 指定したフィールドが完全一致した行を除いて出力する</h3>
 <pre class="prettyprint">$ cat data
 0001 a
