--- a/MANUALHTML/divsen.html
+++ b/MANUALHTML/divsen.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -140,7 +139,7 @@
 Version : Fri Aug 20 22:29:15 JST 2022</pre>
 <h3>【説明】</h3>
 <p>引数のファイルまたは標準入力のテキストデータの数値を1,000で除算し出力する。千単位の表を作成する場合などに使用する。引数において1,000で除算する各フィールドを順に指定する。なお、小数点以下の数値は四捨五入される。<code>-s</code>オプションを指定すると四捨五入せず、小数点の値をそのまま出力する。</p>
-<p><code>&lt;file&gt;</code>として<code>-</code>を指定するかまたは省略すると標準入力を使用する。フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... を省略すると全フィールド指定となる。フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... にひとつでも0があると全フィールド指定となる。コマンド入力が「<code>divsen -s</code>」であったときは標準入力に対して全フィールドを1,000で除算し小数点以下を四捨五入せずに表示するコマンド入力が「<code>divsen</code>」であったときはコマンドの構文を表示して終了する</p>
+<p><code>&lt;file&gt;</code>として<code>-</code>を指定するかまたは省略すると標準入力を使用する。フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code> ... を省略すると全フィールド指定となる。フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code> ... にひとつでも0があると全フィールド指定となる。コマンド入力が「<code>divsen</code><code>-s</code>」であったときは標準入力に対して全フィールドを1,000で除算し小数点以下を四捨五入せずに表示するコマンド入力が「<code>divsen</code>」であったときはコマンドの構文を表示して終了する</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ cat data
 20060201 296030 6710000
@@ -170,7 +169,7 @@ $</pre>
 <h3>【ワンポイント】</h3>
 <p><code>divsen</code>された結果をさらにパイプでつないで<code>divsen</code>を実行すると、100万単位のデータを作成することができる。</p>
 <h3>【注意】</h3>
-<p><code>&lt;file&gt;</code>を省略するときは注意が必要<code>divsen</code>1 10の実行において もし「10」という数字名のファイルが存在すると 標準入力ファイルの第1および第10フィールドを1,000で除算するという動作を「しない」で 「10」というファイルの第1フィールドを1,000で除算するという動作を「する」最後のパラータが「存在するファイルの名前」であればこれを入力ファイル指定としそうでなければフィールド指定として処理し入力ファイル指定は省略されたとして標準入力を仮定する</p>
+<p><code>&lt;file&gt;</code>を省略するときは注意が必要<code>divsen</code> 1 10の実行において もし「10」という数字名のファイルが存在すると 標準入力ファイルの第1および第10フィールドを1,000で除算するという動作を「しない」で 「10」というファイルの第1フィールドを1,000で除算するという動作を「する」最後のパラータが「存在するファイルの名前」であればこれを入力ファイル指定としそうでなければフィールド指定として処理し入力ファイル指定は省略されたとして標準入力を仮定する</p>
 <h3>【関連項目】</h3>
 <p><a href="marume.html" class="command">marume(1)</a></p>
     </div>
