--- a/MANUALHTML/formhame.html
+++ b/MANUALHTML/formhame.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -206,7 +205,7 @@ $</pre>
 </li>
 <li><code>-i</code>オプションと<code>-d</code>オプションの両方が指定された場合、<code>-i</code>オプションによる処理を先に行なう。</li>
 <li>HTMLは正しく記述されている必要がある。タグは<code>&lt;タグ /&gt;</code>あるいは、<code>&lt;タグ&gt;</code><code>&lt;/タグ&gt;</code>と記述される必要がある。変数は必ず<code>&quot; &quot;</code>で囲まれている必要がある(<code>value=&quot;1&quot;</code>など)。
-<code>input type=&quot;checkbox&quot;</code>のときは、必ず<code>value=&quot;XXX&quot;</code>が指
+<code>input type=&quot;checkbox&quot;</code>のときは、<code>必ずvalue=&quot;XXX&quot;</code>が指
 定されている必要がある。
 </li>
  <li><code class="multiline">checkbox</code>、<code class="multiline">radiobox</code>、<code class="multiline">selectbox</code>の複数選択の場合は、ネーム形式データ(5)は次のように1つのタグに対して複行となる。
