--- a/MANUALHTML/getfirst.html
+++ b/MANUALHTML/getfirst.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -182,7 +181,7 @@ $ cat data2
 0000030 じゃが芋 20060203 184
 $</pre>
 <h3>【例3】</h3>
-<p><code>+ng</code>オプションに<code>&lt;fd&gt;</code>を指定すると、標準エラー出力のかわりに<code>&lt;fd&gt;</code>への出力が実施される。</p>
+<p><code>+ng</code> オプションに<code>&lt;fd&gt;</code>を指定すると、標準エラー出力のかわりに<code>&lt;fd&gt;</code>への出力が実施される。</p>
 <pre class="prettyprint">$ getfirst +ng4 1 2 data &gt; /dev/null 4&gt; data2
 $ cat data2
 0000007 セロリ 20060202 136
