--- a/MANUALHTML/haba.html
+++ b/MANUALHTML/haba.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -154,12 +153,12 @@ Edition : 1</pre>
 4
 8</pre>
 <h3>【例２】</h3>
-<p><code>-v</code>オプションで表示幅に変化のあった行番号と表示幅を出力します。</p>
+<p><code>-v</code> オプションで表示幅に変化のあった行番号と表示幅を出力します。</p>
 <pre class="prettyprint">$ hava -v data
 1 4                   &lt;--- １行目からは表示幅４
 4 8                   &lt;--- ４行目からは表示幅８</pre>
 <h3>【例３】</h3>
-<p><code>-f</code>オプションでファイル名もあわせて出力します。標準入力の場合は、ファイル名は STDIN となります。<code>-v</code>オプションと併用すると、ファイル名、行番号、表示幅の順になります。</p>
+<p><code>-f</code> オプションでファイル名もあわせて出力します。標準入力の場合は、ファイル名は STDIN となります。<code>-v</code> オプションと併用すると、ファイル名、行番号、表示幅の順になります。</p>
 <pre class="prettyprint">$ cat file1
 1234
 $ cat file2
