--- a/MANUALHTML/itouch.html
+++ b/MANUALHTML/itouch.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -141,7 +140,7 @@
 Version : Thu Aug 20 20:30:32 JST 2015
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>指定ファイルが存在しない、あるいは０バイトならば、<code>&lt;string&gt;</code>あるいは<code>&lt;file&gt;</code>でファイルの中身を初期化します。<code>-&lt;n&gt;</code>で数字を指定すると<code>&lt;n&gt;</code>行分の<code>&lt;string&gt;</code>あるいは<code>&lt;n&gt;</code>回分の<code>&lt;file&gt;</code>で初期化します。初期化するファイルは複数指定できます。ファイルが存在して０バイトで無い場合は何もしません。指定ファイルが<code>&quot;-&quot;</code>のときは、標準入力を期待し、結果を標準出力に出力します。</p>
+<p>指定ファイルが存在しない、あるいは０バイトならば、<code>&lt;string&gt;</code>あるいは<code>&lt;file&gt;</code> でファイルの中身を初期化します。<code>-&lt;n&gt;</code> で数字を指定すると<code>&lt;n&gt;</code>行分の<code>&lt;string&gt;</code>あるいは<code>&lt;n&gt;</code>回分の<code>&lt;file&gt;</code>で初期化します。初期化するファイルは複数指定できます。ファイルが存在して０バイトで無い場合は何もしません。指定ファイルが<code>&quot;-&quot;</code> のときは、標準入力を期待し、結果を標準出力に出力します。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ cat file
 cat: file: No such file or directory  &lt;-- ファイルが存在しないか０バ
