--- a/MANUALHTML/keycut.html
+++ b/MANUALHTML/keycut.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -188,7 +187,7 @@ $</pre>
 -rw-r--r-- 1 usp usp 91 2009-02-19 11:15 data.4
 $</pre>
 <h3>【例3】-aオプション使用例</h3>
-<p><code>-a</code>オプションを指定すると分割先ファイルは追記されるようになる。分割先ファイルがないときは新たに作成される。このオプションを指定しない場合にはファイルは上書きとなる。</p>
+<p><code>-a</code>オプションを指定すると分割先ファイルは追記されるようになる。分割先ファイルがないときは新たに作成される。こ<code>の</code>オプションを指定しない場合にはファイルは上書きとなる。</p>
 <pre class="prettyprint">$ keycut data.%1 data</pre>
 <pre class="prettyprint">$ keycut -a data.%1 data</pre>
 <pre class="prettyprint">$ ls -l data.*
