--- a/MANUALHTML/map.html
+++ b/MANUALHTML/map.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -296,7 +295,7 @@ X1 1  8  2  7  3  6  4  5
 X2 5  4  6  3  7  2  8  1
 $</pre>
 <h3>【例9】</h3>
-<p>-&lt;数字&gt;オプションと<code><code>num=&lt;n&gt;</code>x&lt;m&gt;</code>を組み合わせると次のように動作する。</p>
+<p><code>-</code><code>&lt;数字&gt;</code>オプションと<code><code>num=&lt;n&gt;</code>x&lt;m&gt;</code>を組み合わせると次のように動作する。</p>
 <pre class="prettyprint">$ cat data3
 X1 Y1 Z1 1 8 4 5 6 7
 X1 Y1 Z2 2 7 4 5 6 7
