--- a/MANUALHTML/mojihame.html
+++ b/MANUALHTML/mojihame.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -187,7 +186,7 @@ $</pre>
 3rd=@ 4th=d
 $</pre>
 <h3>【例3】行単位</h3>
-<p>dataは1行単位に読み込まれ、行の各フィールドが%1 %2 ...に対応する。次の行が読み込まれるときは再びtemplateが使用され、データがはめ込まれ出力される。この使い方は旧<code>mojihame</code>の<code>-r</code>と互換性がある。<code>mojihame -r</code>は将来廃止される。</p>
+<p>dataは1行単位に読み込まれ、行の各フィールドが%1 %2 ...に対応する。次の行が読み込まれるときは再びtemplateが使用され、データがはめ込まれ出力される。この使い方は旧<code>mojihame</code>の<code>-r</code>と互換性がある。<code>mojihame</code><code>-r</code>は将来廃止される。</p>
 <pre class="prettyprint">$ cat data
 a b c d
 w x y z
@@ -268,7 +267,7 @@ $</pre>
 性別＝女
 $</pre>
 <h3>【例6】行単位その4</h3>
-<p>デフォルトでは@というデータはヌル文字列として置換される。このデフォルトを変更するには<code>-d</code>オプションを使用する。<code>-d</code>オプションは<code>-l</code>オプションの後に指定する必要がある。</p>
+<p>デフォルトでは@というデータはヌル文字列として置換される。このデフォルトを変更するには<code>-d</code> オプションを使用する。<code>-d</code> オプションは<code>-l</code>オプションの後に指定する必要がある。</p>
 <pre class="prettyprint">$ mojihame -lLABEL -dx template data</pre>
 <h3>【例7】階層データ</h3>
 <p><code>-h</code>オプションは階層的にデータのはめ込みを実施する。templateにおいて階層的ラベルに囲まれた部分に現れる%数字がdataの階層的キーフィールドに対応する。</p>
