--- a/MANUALHTML/msort.html
+++ b/MANUALHTML/msort.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -140,7 +139,7 @@
 Version : Sun Aug 28 11:47:10 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>key=&lt;key&gt;</code>にしたがって<code>&lt;file&gt;</code>のソートを行います。<code>&lt;key&gt;</code>として、フィールドの位置を指定できます。</p>
+<p><code>key=&lt;key&gt;</code> にしたがって<code>&lt;file&gt;</code> のソートを行います。<code>&lt;key&gt;</code> として、フィールドの位置を指定できます。</p>
 <pre style="margin-left: 3.5em;">
   msort key=2 file
   msort key=2/5 file
@@ -152,7 +151,7 @@ Edition : 1</pre>
   msort key=2n/5nr file      ×
   msort key=2n/5r  file      ×
 </pre>
-<p>ファイル名を指定しない、或は <code>-</code>を指定した場合、標準入力から読み込みます。</p>
+<p>ファイル名を指定しない、或は <code>-</code> を指定した場合、標準入力から読み込みます。</p>
     </div>
 
     <div id="lastmodified">Last modified: Sun Aug 28 11:49:10 JST 2022</div>
