--- a/MANUALHTML/rank.html
+++ b/MANUALHTML/rank.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -164,7 +163,7 @@ $</pre>
 8 USA TOM_______ 35
 $</pre>
 <h3>【例2】ref=指定</h3>
-<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2 ref=3@2/5</code>などの連続・不連続のフィールドを指定することも可能。</p>
+<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2</code><code>ref=3@2/5</code> などの連続・不連続のフィールドを指定することも可能。</p>
 <pre class="prettyprint">$ rank ref=1 data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
