--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -217,7 +216,7 @@ d店 1日目   75 11.0   48
 e店 1日目  211 31.0  140
 $</pre>
 <h3>【例4】-&lt;s>オプション</h3>
-<p>-&lt;数値&gt;で構成比の小数点以下の精度を指定できる。</p>
+<p><code>-</code><code>&lt;数値&gt;</code>で構成比の小数点以下の精度を指定できる。</p>
 <pre class="prettyprint">$ cat data
 a店 1日目 103  62               ←店名 日付 売数 客数
 b店 1日目 210 113
