--- a/MANUALHTML/rjson.html
+++ b/MANUALHTML/rjson.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -140,9 +139,9 @@
 Version : Mon Sep 12 12:13:51 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>JSON 形式(RFC8259) のファイル<code>&lt;json-file&gt;</code>をフィールド形式にします。オブジェクト名とリスト位置がネストの順に出力され、最後に値が出力されます。</p>
+<p>JSON 形式(RFC8259) のファイル<code>&lt;json-file&gt;</code> をフィールド形式にします。オブジェクト名とリスト位置がネストの順に出力され、最後に値が出力されます。</p>
 <h3>【オプション】</h3>
-<p><code>-p</code>: オブジェクト名やリスト位置の区切りを変更します。デフォルトは半角空白です。<code>-m</code>: オブジェクト名に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code>です。<code>-s</code>: 値に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code>です。<code>-n</code>: ヌル値(空文字列)を変更します。デフォルトは<code>&quot;_&quot;</code>です。</p>
+<p><code>-p</code> : オブジェクト名やリスト位置の区切りを変更します。デフォルトは半角空白です。<code>-m</code> : オブジェクト名に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code> です。<code>-s</code> : 値に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code> です。<code>-n</code> : ヌル値(空文字列)を変更します。デフォルトは<code>&quot;_&quot;</code> です。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ cat jsondata
 {
