--- a/MANUALHTML/tcat.html
+++ b/MANUALHTML/tcat.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -161,7 +160,7 @@ $</pre>
 0000011 安武______   55    F 92 56 83 96 75
 $</pre>
 <h3>【例2】</h3>
-<p><code>-&lt;n&gt;</code>オプションを使用すると、ファイルを<code>&lt;n&gt; -</code>で指定した行数分だけ間をあけて連結することができる。</p>
+<p><code>-&lt;n&gt;</code>オプションを使用すると、ファイルを<code>&lt;n&gt;</code><code>-</code>で指定した行数分だけ間をあけて連結することができる。</p>
 <p>2行あけて連結するには次のようにコマンドを実行する。</p>
 <pre class="prettyprint">$ tcat -2 file1 file2
 ---試験結果---
