--- a/MANUALHTML/uconv.html
+++ b/MANUALHTML/uconv.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -150,7 +149,7 @@ Edition : 1</pre>
 <li><code>-ltou</code>: <code>ISO-8851-1</code> から <code>UTF-8</code></li>
 <li><code>-utol</code>: <code>UTF-8</code> から <code>ISO-8851-1</code></li>
 </ul>
-<p>ファイル名が省略された時及び<code>&quot;-&quot;</code>の時は標準入力から入力します。</p>
+<p>ファイル名が省略された時及び<code>&quot;-&quot;</code> の時は標準入力から入力します。</p>
     </div>
 
     <div id="lastmodified">Last modified: Sun Aug 28 13:25:04 JST 2022</div>
