--- a/MANUALHTML/yarr.html
+++ b/MANUALHTML/yarr.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -192,7 +191,7 @@ $</pre>
 1 2 3 4
 $</pre>
 <h3>【例4】</h3>
-<p><code>-d &lt;str&gt;</code>オプションは横展開するときのフィールドセパレータを指定する。</p>
+<p><code>-d</code><code>&lt;str&gt;</code> オプションは横展開するときのフィールドセパレータを指定する。</p>
 <pre class="prettyprint">$ yarr -d@ num=4 data &gt; data2
 $ cat data2
 0000000 浜地______ 50 F 91@59@20@76
