--- a/MANUALHTML/calsed.html
+++ b/MANUALHTML/calsed.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -143,7 +142,7 @@ Option  : -n&lt;string&gt;
 Version : Tue Oct 19 23:46:03 JST 2021
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>calsed</code>は sed の文字列置換機能の簡易版です。指定した元文字列を指定した文字列に置換します。sed のように、元文字列に正規表現を使うことはできません。ファイル名を指定しないか、<code>&quot;-&quot;</code>の時は、標準入力を期待します。置換後文字列が<code>&quot;@&quot;</code>の場合、ヌル文字列に置換します。この文字列を変更するのに、<code>-n</code>オプションを指定します。<code>-s</code>オプションは置換後文字列の中で半角空白に変換する文字を指定します。</p>
+<p><code>calsed</code> は sed の文字列置換機能の簡易版です。指定した元文字列を指定した文字列に置換します。sed のように、元文字列に正規表現を使うことはできません。ファイル名を指定しないか、<code>&quot;-&quot;</code> の時は、標準入力を期待します。置換後文字列が<code>&quot;@&quot;</code> の場合、ヌル文字列に置換します。この文字列を変更するのに、<code>-n</code> オプションを指定します。<code>-s</code> オプションは置換後文字列の中で半角空白に変換する文字を指定します。</p>
 <h3>【例１】</h3>
 <p>直接置換文字列を指定する。</p>
 <pre class="prettyprint">$ cat data
@@ -184,7 +183,7 @@ $ cat result
 <pre class="prettyprint">before1 after1
 before2 after2
 before3 after3</pre>
-<p><code>&lt;before&gt;</code>文字列のあと、半角空白を１個はさんで<code>&lt;after&gt;</code>文字列を指定します。<code>&lt;after&gt;</code>文字列はヌル文字列でも半角空白を含む文字列でも構いません。<code>&lt;after&gt;</code>文字列が<code>&quot;@&quot;</code>の時、ヌル文字列に変換されます。この文字列は<code>-n</code>オプションで変更できます。<code>-s</code>オプションで<code>&lt;after&gt;</code>文字列の文字を半角空白に置換することができます。</p>
+<p><code>&lt;before&gt;</code> 文字列のあと、半角空白を１個はさんで<code>&lt;after&gt;</code> 文字列を指定します。<code>&lt;after&gt;</code> 文字列はヌル文字列でも半角空白を含む文字列でも構いません。<code>&lt;after&gt;</code> 文字列が<code>&quot;@&quot;</code> の時、ヌル文字列に変換されます。この文字列は<code>-n</code> オプションで変更できます。<code>-s</code> オプションで<code>&lt;after&gt;</code> 文字列の文字を半角空白に置換することができます。</p>
 <pre class="prettyprint">$ cat script
 NAME usp
 AGE 25
