--- a/MANUALHTML/cap.html
+++ b/MANUALHTML/cap.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -144,7 +143,7 @@ Edition : 1</pre>
 <p>引数で指定したフィールドの半角英小文字を、すべて半角英大文字に変換して出力する。変換できない文字(日本語、数字、記号、全角文字)は、変換されずにそのまま出力される。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
 <p><code>-d</code>オプションがあると<code>&lt;string&gt;</code>で指定された文字列に対して変換を行なう。</p>
 <h3>【注意】</h3>
-<p> 入力ファイル<code>&lt;file&gt;</code>は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
+<p> 入力ファイル<code>&lt;file&gt;</code> は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code> ... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code> ... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
 <h3>【例１】</h3>
 <p>(元データ)</p>
 <pre class="prettyprint">$ cat data
