--- a/MANUALHTML/check_attr_name.html
+++ b/MANUALHTML/check_attr_name.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -156,7 +155,7 @@ Version         : Mon Dec 20 21:02:03 JST 2021
 Edition         : 1</pre>
 <h3>【説明】</h3>
 <p><code>&lt;check_file&gt;</code>に記述されているタグ名、属性+桁数の指定にしたがって<code>&lt;name_file&gt;</code>のデータを判定する。データが大文字なら桁数に等しい値を、小文字なら指定桁数未満の値を要求する。<code>&lt;name_file&gt;</code>のタグは、タグ名_数値であれば、_数値部分を取り除いたタグ名のみでチェックをする。エラーがあった場合は、コマンドはエラー終了し標準出力にタグ名と桁数+属性を出力する。</p>
-<p><code>--through &lt;string&gt;</code>オプションは、<code>&lt;name_file&gt;</code>のデータが<code>&lt;string&gt;</code>のうちいずれかに等しい場合はチェックを実施しない。<code>&lt;string&gt;</code>のデフォルトは_となる。このオプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定することができる。</p>
+<p><code>--through &lt;string&gt;</code>オプションは、<code>&lt;name_file&gt;</code>のデータが<code>&lt;string&gt;</code>のうちいずれかに等しい場合はチェックを実施しない。<code>&lt;string&gt;</code>のデフォルトは_となる。こ<code>の</code>オプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定することができる。</p>
 <p><code>--ngword &lt;ng_file&gt;</code>オプションは、Z X K などの日本語文字チェックのときに、<code>&lt;ng_file&gt;</code>に含まれてるマルチバイト文字をエラーとする。</p>
 <h3>【例1】通常のチェック</h3>
 <pre class="prettyprint">$ cat check
