--- a/MANUALHTML/extname.html
+++ b/MANUALHTML/extname.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -140,7 +139,7 @@
 Version : Fri Oct 21 11:26:06 JST 2011
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>extname</code>コマンドは指定した<code>&lt;pathname&gt;</code>からサフィックスを出力します。</p>
+<p><code>extname</code> コマンドは指定した<code>&lt;pathname&gt;</code> からサフィックスを出力します。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ extname /home/usp/hogehoge.c
 c</pre>
