--- a/MANUALHTML/gyo.html
+++ b/MANUALHTML/gyo.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -183,7 +182,7 @@ data2 2
 data3 4
 $</pre>
 <h3>【備考】</h3>
-<p>ファイル名に <code>-</code>を指定すると標準入力ファイルを期待する。</p>
+<p>ファイル名に <code>-</code> を指定すると標準入力ファイルを期待する。</p>
 <pre class="prettyprint">$ cat data2 |  gyo -f data1 - data3
 data1 3
 data2 2
