--- a/MANUALHTML/join2.html
+++ b/MANUALHTML/join2.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -210,7 +209,7 @@ $</pre>
 10 C 0000011 ********** ** * 92 56 83 96 75
 $</pre>
 <h3>【例3】</h3>
-<p>+<code>&lt;string&gt;</code>はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
+<p>+<code>&lt;string&gt;</code>はダミーデータとして補完する文字を指定す<code>る</code>オプション。+の後に補完で使用する文字を指定する。</p>
 <pre class="prettyprint">$ cat master
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
