--- a/MANUALHTML/joinx.html
+++ b/MANUALHTML/joinx.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>tarr - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <title>joinx - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
   <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
@@ -131,113 +131,39 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>tarr(1)</h2>
+<h2>joinx(1)</h2>
 <h3>【名前】</h3>
-<p><code>tarr</code> :  横型のデータを縦型に展開</p>
+<p><code>joinx</code> :  総掛けで連結する</p>
 <h3>【書式】</h3>
-<pre class="list">Usage   : tarr [-&lt;n&gt;] [-d&lt;str&gt;] [num=&lt;m&gt;] &lt;file&gt;
-Version : Mon Jul 25 20:20:42 JST 2022
+<pre class="list">Usage   : joinx &lt;file1&gt; [&lt;file2&gt;]
+Version : Sat Sep 24 08:21:57 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>指定したファイルの第1フィールドから<code><code>num=&lt;n&gt;</code></code>で指定したフィールドまでのフィールドをキーとして、横に並んでいるフィールドデータを縦に展開して並べ直す。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
-<h3>【例1】基本的な使い方</h3>
-<pre class="prettyprint">$ cat data
-0000000 浜地______ 50 F 91 59 20 76
-0000001 鈴田______ 50 F 46 39 8 5
-0000003 杉山______ 26 F 30 50 71 36
-0000004 白土______ 40 M 58 71 20 10
-$</pre>
-<pre class="prettyprint">$ tarr num=4 data               ←第4フィールドまでをキーに縦に展開
-0000000 浜地______ 50 F 91
-0000000 浜地______ 50 F 59
-0000000 浜地______ 50 F 20
-0000000 浜地______ 50 F 76
-0000001 鈴田______ 50 F 46
-0000001 鈴田______ 50 F 39
-0000001 鈴田______ 50 F 8
-0000001 鈴田______ 50 F 5
-0000003 杉山______ 26 F 30
-0000003 杉山______ 26 F 50
-0000003 杉山______ 26 F 71
-0000003 杉山______ 26 F 36
-0000004 白土______ 40 M 58
-0000004 白土______ 40 M 71
-0000004 白土______ 40 M 20
-0000004 白土______ 40 M 10
-$</pre>
-<h3>【例2】</h3>
-<p><code>-&lt;n&gt;</code>オプションを使用すると<code>&lt;n&gt;</code>フィールドごとに縦展開する。</p>
-<pre class="prettyprint">$ tarr -2 num=4 data            ←2フィールド毎に縦展開する。
-0000000 浜地______ 50 F 91 59
-0000000 浜地______ 50 F 20 76
-0000001 鈴田______ 50 F 46 39
-0000001 鈴田______ 50 F 8 5
-0000003 杉山______ 26 F 30 50
-0000003 杉山______ 26 F 71 36
-0000004 白土______ 40 M 58 71
-0000004 白土______ 40 M 20 10
-$</pre>
-<h3>【例3】</h3>
-<p><code><code>num=&lt;n&gt;</code></code>を指定しないと単純に縦展開する。</p>
-<pre class="prettyprint">$ cat data3
-1 2 3 4
-5 6
-$</pre>
-<pre class="prettyprint">$ tarr data3
-1
-2
-3
-4
-5
-6
-$</pre>
-<h3>【例4】</h3>
-<p><code>-d</code><code>&lt;str&gt;</code>オプションを使うことで縦展開するフィールドのフィールドセパレータを指定できる。<code><code>num=&lt;n&gt;</code></code>で指定されるキーフィールドは空白区切りである必要がある。</p>
-<pre class="prettyprint">$ cat data
-0000000 浜地______ 50 F 91@59@20@76@54
-0000001 鈴田______ 50 F 46@39@8@5@21
-0000003 杉山______ 26 F 30@50@71@36@30
-0000004 白土______ 40 M 58@71@20@10@6
-$</pre>
-<pre class="prettyprint">$ tarr -d@ num=4 data
-0000000 浜地______ 50 F 91
-0000000 浜地______ 50 F 59
-0000000 浜地______ 50 F 20
-0000000 浜地______ 50 F 76
-0000000 浜地______ 50 F 54
-0000001 鈴田______ 50 F 46
-0000001 鈴田______ 50 F 39
-0000001 鈴田______ 50 F 8
-0000001 鈴田______ 50 F 5
-0000001 鈴田______ 50 F 21
-0000003 杉山______ 26 F 30
-0000003 杉山______ 26 F 50
-0000003 杉山______ 26 F 71
-0000003 杉山______ 26 F 36
-0000003 杉山______ 26 F 30
-0000004 白土______ 40 M 58
-0000004 白土______ 40 M 71
-0000004 白土______ 40 M 20
-0000004 白土______ 40 M 10
-0000004 白土______ 40 M 6
-$</pre>
+<p>２つのファイルの各レコードを、総てのパターンの掛け合わせを作り連結して出力します。引数を指定する順番に総掛けされます。つまり、<code>&lt;file1&gt;</code> の各レコードに対し、<code>&lt;file2&gt;</code> のすべてのレコードが順番に総掛けされます</p>
+<h3>【例】</h3>
+<p>(元データ1：data1)</p>
+<pre class="prettyprint">$ cat data1
+1 農業
+2 工業
+3 サービス業</pre>
+<p>(元データ2：data2)</p>
 <pre class="prettyprint">$ cat data2
-0001 1n2n3
-0002 4n5n6
-$</pre>
-<pre class="prettyprint">$ tarr -d'n' num=1 data2
-0001 1
-0001 2
-0001 3
-0002 4
-0002 5
-0002 6
-$</pre>
-<h3>【関連項目】</h3>
-<p><a href="yarr.html" class="command">yarr(1)</a></p>
+1 東京
+2 大阪
+3 名古屋
+4 福岡
+5 札幌</pre>
+<pre class="prettyprint">$ joinx data1 data2 &gt; data3
+（data3）       &lt;- data1 と data2 の全レコード同士の組み合わせで出力
+1 農業 1 東京
+1 農業 2 大阪
+1 農業 3 名古屋
+1 農業 4 福岡
+1 農業 5 札幌
+2 工業 1 東京</pre>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: Sat Sep 24 08:59:32 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
