--- a/MANUALHTML/maezero.html
+++ b/MANUALHTML/maezero.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -111,8 +112,6 @@
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -159,7 +158,7 @@ $</pre>
 000012 000345 006789
 $</pre>
 <h3>【例4】</h3>
-<p>フィールド指定に<code>NF</code>や<code>NF -&lt;n&gt;</code>を使うことがでる。</p>
+<p>フィールド指定に<code>NF</code>や<code>NF</code><code>-&lt;n&gt;</code>を使うことがでる。</p>
 <pre class="prettyprint">$ maezero NF-1.6 data
 12 000345 6789
 $</pre>
