--- a/MANUALHTML/mime-read.html
+++ b/MANUALHTML/mime-read.html
@@ -70,6 +70,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -112,8 +113,6 @@
               <li><a href="zen.html">zen(1)</a></li>
               <li></li>
 
-<li></li>
-
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -141,7 +140,7 @@
 Version : Sun Apr 19 23:32:18 JST 2020
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>MIME形式のファイル&lt;MIME<code>-file</code>&gt;ファイルの各セクションの中から、<code>name=&quot;&lt;name&gt;&quot;</code>または<code>filename=&quot;&lt;name&gt;&quot;</code>の記述があるパートを見つけだし、その部分のデータを出力する。<code>-v</code>を指定した場合はすべての<code>name=&quot;...&quot;</code>または<code>filename=&quot;...&quot;</code>を対象として名前の一覧を出力する。</p>
+<p>MIME形式のファイル&lt;MIME<code>-file</code>&gt;ファイルの各セクションの中から、<code>name=&quot;&lt;name&gt;&quot;</code> または<code>filename=&quot;&lt;name&gt;&quot;</code>の記述があるパートを見つけだし、その部分のデータを出力する。<code>-v</code> を指定した場合はすべての<code>name=&quot;...&quot;</code>または<code>filename=&quot;...&quot;</code>を対象として名前の一覧を出力する。</p>
 <h3>【例】</h3>
 <p><code>mime-file</code>の中からabc.xlsで指定される名前のセクションを取り出す。</p>
 <pre class="prettyprint">$ mime-read abc.xls mime-file &gt; abc.xls</pre>
